ingress/nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: kubeissuer
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: kunal.shubham.art 
    http:
      paths:
      - path: /backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /()(.*) 
        pathType: ImplementationSpecific 
        backend: 
          service: 
            name: bms-frontend-service
            port: 
              number: 80
      - path: /admin(/|$)(.*) 
        pathType: ImplementationSpecific 
        backend: 
          service: 
            name: bms-admin-service
            port: 
              number: 80
  tls:
  - hosts: 
    - kunal.shubham.art
    secretName: abracadabra-v2
---
